-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.4.0-beta1
-
None
-
Windows
See screenshots.
Caused by commit e133ee89286b289b047a53422caf4443c2d4881c.
For Gerrit Dashboard: QTCREATORBUG-18457 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
199244,4 | Fix size of locator popup | 4.4 | qt-creator/qt-creator | Status: MERGED | -2 | 0 |
199373,2 | Give locator popup list a bit more spacing again | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |