Fix size of locator popup

The item delegate's sizeHint will only be correct after there are actual
items to show. So behave similar to uniformRowHeights by waiting for the
first data to arrive and then setting the size of the completion list
and the popup.

Task-number: QTCREATORBUG-18457
Change-Id: I7aa18988e07e21c2ec6587e83fb0de2dce6552ef
Reviewed-by: David Schulz <david.schulz@qt.io>